--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
 	                    <ul>
 <!-- 	                        <li><a href="#" th:text="#{menu.general.catalogs.itemcategories}" -->
 <!-- 	                        	onclick="loadPage('groups')">categories!!</a></li> -->
-	                        <li><a href="#" th:text="#{menu.general.catalogs.itemcategories}"
+	                        <li><a href="#" th:text="#{menu.general.catalogs.itemcategory}"
 	                        	th:href="@{/catalogs/categories}">categories!!</a></li>
 	                    </ul>
 	                </li>
