--- a/src/main/resources/templates/general/itemCategoryAdd.html
+++ b/src/main/resources/templates/general/itemCategoryAdd.html
@@ -31,7 +31,8 @@
 	 				<label for="description" th:text="#{itemCategory.lbl.desc}"></label>
 	 			</td>
 	 			<td>
-	 				<input id="description"  th:field="*{description}" th:errorclass="invalidField" type="text" required="required"/>
+	 				<input id="description"  th:field="*{description}" th:errorclass="invalidField" type="text" required="required"
+	 				 	autofocus="autofocus"/>
 	 			</td>
 	 			<td>
 			 		<ul th:if="${#fields.hasErrors('description')}">
