--- a/src/main/resources/templates/general/catalogs.html
+++ b/src/main/resources/templates/general/catalogs.html
@@ -3,22 +3,22 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     
-	<link rel="stylesheet" type="text/css" href="../../../webapp/css/menu.css" th:href="@{/css/menu.css}"/>
+	<link rel="stylesheet" type="text/css" href="../../../webapp/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"/>
 	<link rel="stylesheet" type="text/css" href="../../../webapp/css/main.css" th:href="@{/css/main.css}"/>
 		
+<!-- 	<script src="../../webapp/js/jquery.js" th:src="@{/js/jquery.js}"></script> -->
+<!-- 	<script src="../../webapp/js/jquery-form.js" th:src="@{/js/jquery-form.js}"></script> -->
+<!-- 	<script src="../../webapp/js/ajaxMethods.js" th:src="@{/js/ajaxMethods.js}"></script> -->
 	<script src="../../webapp/js/jquery.js" th:src="@{/js/jquery.js}"></script>
-	<script src="../../webapp/js/jquery-form.js" th:src="@{/js/jquery-form.js}"></script>
-	<script src="../../webapp/js/ajaxMethods.js" th:src="@{/js/ajaxMethods.js}"></script>
+	<script src="../../webapp/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
     
 </head>
 <body>
 	<div th:replace="index :: menu"></div>
 
-	<div id="main">
-	<ul id="xyz" class="breadcrumb" th:fragment="breadCrumb">
-		<div th:replace="frags/common :: cat"></div>
-	</ul>
+<ol>
+	<li><a href="#">Item Categories!!</a></li>
+</ol>
 
-	</div>
 </body>
 </html>
