--- a/src/main/resources/templates/frags/common.html
+++ b/src/main/resources/templates/frags/common.html
@@ -2,18 +2,100 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head></head>
 <body>
+	<nav class="navbar navbar-default" th:fragment="menu">
+	  	<div class="container-fluid">
+	    <!-- Brand and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	        <span class="sr-only">Toggle navigation!!</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	
+	      <a href="#" th:href="@{/}" class="navbar-brand"
+	        	th:text="#{menu.home}">!!</a>   
+	    </div>
 
-	<ul>
-		<li th:fragment="cat">
-			<a th:href="@{/catalogs}"
-				th:text="#{menu.general.catalogs}">Catalogs!!!!</a></li>
-		<li th:fragment="cat-categ">
-			<a th:href="@{/catalogs/categories}" href="#"
-				th:text="#{menu.general.catalogs.itemcategory}">item categories!!!!</a></li>
-		<li th:fragment="cat-categ-add">
-			<a th:href="@{/catalogs/categories/add}" href="#"
-				th:text="#{menu.general.catalogs.itemcategory.addNew}">add new item category!!!!</a></li>
+	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav">
+	        <li><a href="#">Link!!</a></li>
+	        <li class="dropdown">
+	          <a href="#" class="dropdown-toggle"
+	          		data-toggle="dropdown"><span th:text="#{menu.general.catalogs}">catalogs!!</span><span class="caret"></span></a>
+	          <ul class="dropdown-menu">
+	          	<li><a href="#" th:text="#{menu.general.catalogs.itemcategory}"
+	                   	th:href="@{/catalogs/categories}">categories!!</a></li>
+	            <li class="divider"></li>
+	            <li><a href="#">dummy1</a></li>
+	            <li><a href="#">dummy2</a></li>
+	            <li class="divider"></li>
+	            <li><a href="#">dummy3</a></li>
+	          </ul>
+	        </li>
+	      </ul>
+	      <ul class="nav navbar-nav navbar-right">
+	      	<li>
+		      <form class="navbar-form navbar-left" method="post"
+		      	th:action="@{/logout}">
+		        <input type="submit" class="btn btn-default" value="Logout!!" th:value="#{login.btn.logout}"/>
+		      </form>
+		    </li>
+	      </ul>
+	    </div><!-- /.navbar-collapse -->
+	  </div><!-- /.container-fluid -->
+	</nav>
+
+
+	<ul class="pagination pagination-sm" th:fragment="pagingBar(page,pageSize)">
+		<li th:class="${page.firstPage}?'previous disabled' : 'previous '">
+   			<a th:unless="${itemCategories.firstPage}" th:href="@{categories(page=0,size=${pageSize})}">First!!</a>
+   			<a th:if="${page.firstPage}">First!</a>
+		</li> 
+ 		<li th:each="number : ${#numbers.sequence(1, page.totalPages)}" th:with="current=(${page.number+1} == ${number})" 
+ 			th:class="${current}?'active'">
+ 			<a th:unless="${current}" th:text="${number}" th:href="@{categories(page=${number-1},size=${pageSize})}"></a>
+ 			<a th:if="${current}" th:text="${number}"></a>
+ 		</li> 
+		<li th:class="${page.lastPage}?'next disabled' : 'next'">
+   			<a th:unless="${page.lastPage}" th:href="@{categories(page=${page.totalPages-1},size=${pageSize})}">Last!!</a>
+   			<a th:if="${page.lastPage}">Last!</a>
+   		</li>
+	</ul>
+
+
+	<ul th:fragment="breadcrumbsCatagories" class="breadcrumb"
+	th:with="link0='/catalogs'
+	,link1='/catalogs/categories'
+	,link2='/catalogs/categories/add'
+	,link3='/catalogs/categories/remove'
+	
+	,indexOf0=${#strings.indexOf(#httpServletRequest.requestURI,link0)  > 0}
+	,endsWith0=${#strings.endsWith(#httpServletRequest.requestURI,link0)}
+	,indexOf1=${#strings.indexOf(#httpServletRequest.requestURI,link1)  > 0}
+	,endsWith1=${#strings.endsWith(#httpServletRequest.requestURI,link1)}
+	,indexOf2=${#strings.indexOf(#httpServletRequest.requestURI,link2)  > 0}
+	,endsWith2=${#strings.endsWith(#httpServletRequest.requestURI,link2)}
+	,indexOf3=${#strings.indexOf(#httpServletRequest.requestURI,link3)  > 0}
+	,endsWith3=${#strings.endsWith(#httpServletRequest.requestURI,link3)}"
+	>
+		<li th:if="${indexOf0}" class="active">
+			<a th:unless="${endsWith0}" th:href="@{${link0}}" th:text="#{menu.general.catalogs}" href="#"></a>
+			<span th:if="${endsWith0}" th:text="#{menu.general.catalogs}"></span>
+		</li>
+		<li th:if="${indexOf1}" class="active">
+			<a th:unless="${endsWith1}" th:href="@{${link1}}" th:text="#{menu.general.catalogs.itemcategory}" href="#"></a>
+			<span th:if="${endsWith1}" th:text="#{menu.general.catalogs.itemcategory}"></span>
+		</li>
+		<li th:if="${indexOf2}" class="active">
+			<a th:unless="${endsWith2}" th:href="@{${link2}}" th:text="#{menu.general.catalogs.itemcategory.addNew}" href="#"></a>
+			<span th:if="${endsWith2}" th:text="#{menu.general.catalogs.itemcategory.addNew}"></span>
+		</li>
+		<li th:if="${indexOf3}" class="active">
+			<a th:unless="${endsWith3}" th:href="@{${link3}}" th:text="#{menu.general.catalogs.itemcategory.remove}" href="#"></a>
+			<span th:if="${endsWith3}" th:text="#{menu.general.catalogs.itemcategory.remove}"></span>
+		</li>
 	</ul>
 </body>
 </html>
-
