--- a/src/main/resources/templates/general/itemCategory.html
+++ b/src/main/resources/templates/general/itemCategory.html
@@ -3,32 +3,27 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     
-	<link rel="stylesheet" type="text/css" href="../../../webapp/css/menu.css" th:href="@{/css/menu.css}"/>
+<!-- 	<link rel="stylesheet" type="text/css" href="../../../webapp/css/menu.css" th:href="@{/css/menu.css}"/> -->
+	<link rel="stylesheet" type="text/css" href="../../../webapp/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"/>
 	<link rel="stylesheet" type="text/css" href="../../../webapp/css/main.css" th:href="@{/css/main.css}"/>
-	<link rel="stylesheet" type="text/css" href="../../../webapp/css/jquery-dataTables.css" th:href="@{/css/jquery-dataTables.css}"/>
 		
 	<script src="../../webapp/js/jquery.js" th:src="@{/js/jquery.js}"></script>
-	<script src="../../webapp/js/jquery-form.js" th:src="@{/js/jquery-form.js}"></script>
-	<script src="../../webapp/js/ajaxMethods.js" th:src="@{/js/ajaxMethods.js}"></script>
-	<script src="../../webapp/js/jquery-dataTables.js" th:src="@{/js/jquery-dataTables.js}"></script>
+<!-- 	<script src="../../webapp/js/jquery-form.js" th:src="@{/js/jquery-form.js}"></script> -->
+<!-- 	<script src="../../webapp/js/ajaxMethods.js" th:src="@{/js/ajaxMethods.js}"></script> -->
+	<script src="../../webapp/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 	
 </head>
 <body>
-	<div th:replace="index :: menu"></div>
-
-	<div id="main">
-		<ul class="breadcrumb">
-			<li th:replace="frags/common :: cat"></li>
-			<li th:replace="frags/common :: cat-categ"></li>
-		</ul>
-		
+	<br th:replace="frags/common :: menu"/>
+	<br th:replace="frags/common :: breadcrumbsCatagories"/>	
+			
 	 	<h2 th:text="#{itemcategory.lbl.title}">Item categories!!</h2>
 	 	<a th:href="@{/catalogs/categories/add}" href="#"
 	 		th:text="#{menu.general.catalogs.itemcategory.addNew}">Add new category!!</a>
 	 	<br/><br/>
 
 			<table id="table1" class="display"
-				th:fragment="table1">
+				th:fragment="tableCatagory">
 				<thead>
 					<tr>
 						<th th:text="#{itemCategory.lbl.id}">Id!!</th>
@@ -122,6 +117,6 @@
 				</tbody>
 			</table>
 		
-	</div>
+		<ul th:replace="frags/common :: pagingBar(${itemCategories},5)"></ul>
 </body>
 </html>
