--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,62 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>LiberAlbus - Login</title>
-	
-	<!--[if lt IE 9]>
-	          <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	        <![endif]-->
-	
-	<!-- Our CSS stylesheet file -->
-	<link rel="stylesheet" type="text/css" href="../../webapp/css/menu.css" th:href="@{/css/menu.css}"/>
-	<link rel="stylesheet" type="text/css" href="../../webapp/css/main.css" th:href="@{/css/main.css}"/>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<title>Invent</title>
 		
-	<script src="../../webapp/js/jquery.js" th:src="@{/js/jquery.js}"></script>
-	<script src="../../webapp/js/jquery-form.js" th:src="@{/js/jquery-form.js}"></script>
-	<script src="../../webapp/js/ajaxMethods.js" th:src="@{/js/ajaxMethods.js}"></script>
-
-</head>
-<body>
-	<h1 id="loadBox" th:text="#{msg.loading}">loading...!!</h1>
-		<div class="menuContainer"  th:fragment="menu">
-	    <ul id="menu">
-	        <li><a href="#" th:href="@{/}" th:text="#{menu.home}">Home!!</a></li>
-	        <li><a href="#s1" th:text="#{menu.general}">general!!</a>
-	            <span id="s1"></span>
-	            <ul class="submenu">
-	                <li ><a href="#" th:href="@{/catalogs}" th:text="#{menu.general.catalogs}">catalogs!!</a>
-	                    <ul>
-<!-- 	                        <li><a href="#" th:text="#{menu.general.catalogs.itemcategories}" -->
-<!-- 	                        	onclick="loadPage('groups')">categories!!</a></li> -->
-	                        <li><a href="#" th:text="#{menu.general.catalogs.itemcategory}"
-	                        	th:href="@{/catalogs/categories}">categories!!</a></li>
-	                    </ul>
-	                </li>
-
-	            </ul>
-	        </li>
-<!-- 	        <li><a href="#" th:text="#{menu.config}">configuración!!</a></li> -->
-	        <li class="active"><a href="#" th:text="#{menu.about}">acerca de!!</a></li>
-		</ul>
-		<form th:action="@{/logout}" method="post">
-			<input type="submit" value="Logout!!" th:value="#{login.btn.logout}"/>
-		</form>	  	
-	</div>
+		<!--[if lt IE 9]>
+		          <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		        <![endif]-->
+		
+		<!-- Our CSS stylesheet file -->
+<!-- 		<link rel="stylesheet" type="text/css" href="../../../webapp/css/menu.css" th:href="@{/css/menu.css}"/> -->
+		<link rel="stylesheet" type="text/css" href="../../../webapp/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"/>
 	
+		<script src="../../webapp/js/jquery.js" th:src="@{/js/jquery.js}"></script>
+		<script src="../../webapp/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 
-<!-- 	<div> -->
+	</head>
+	<body>
 
-<!-- 			<input type="text" id="searchSurname" name="searchSurname" /> <br /> -->
-<!-- 			<label for="searchSurname" th:text="#{lbl.search.student}">Search students!!</label> -->
-<!-- 			<button id="searchButton" name="searchButton"  -->
-<!-- 				onclick="readCatalog('student','main')" type="button" th:text="#{btn.search}">Search!!</button> -->
-				
-<!-- 	</div> -->
-	<div id="main">
-		<div id="breadCrumbs"></div>
-	</div>
-</body>
+	<nav th:replace="frags/common :: menu"></nav>
+	</body>
 </html>
 
