--- a/src/main/resources/templates/general/catalogs.html
+++ b/src/main/resources/templates/general/catalogs.html
@@ -17,7 +17,7 @@
 	<div th:replace="index :: menu"></div>
 
 <ol>
-	<li><a href="#">Item Categories!!</a></li>
+	<li><a href="#" th:href="@{catalogs/categories}">Item Categories!!</a></li>
 </ol>
 
 </body>
