--- a/src/main/resources/templates/general/itemCategoryAdd.html
+++ b/src/main/resources/templates/general/itemCategoryAdd.html
@@ -27,13 +27,28 @@
 	 			<li th:each="err : ${#fields.errors('description')}" th:text="${err}"/>
 	 		</ul>
 		</div>
-		
+	  </div>
+
+ 	  <div th:if="${edit}" class="form-group" th:name="description" th:errorclass="'form-group has-error'">
+		<label for="status" th:text="#{itemCategory.lbl.desc}" class="col-sm-1 control-label">status!!</label>
+		<div class="col-sm-6">
+			<select id="description"  th:field="*{status}" class="form-control">
+				<option value="0" disabled="disabled">-select one-!!</option>
+				<option value="0">status1!!</option>
+				<option value="2">status2!!</option>
+				<option value="3">status3!!</option>
+			</select>
+			<ul th:if="${#fields.hasErrors('description')}" class="help-block">
+	 			<li th:each="err : ${#fields.errors('description')}" th:text="${err}"/>
+	 		</ul>
 		</div>
-	 	<div class="form-group">
+	  </div>
+
+	   <div class="form-group">
    			<div class="col-sm-offset-1 col-sm-6">
       			<button type="submit" class="btn btn-default" th:text="#{btn.add}">Add!!</button>
     		</div>
-		</div>
+	  </div>
  	</form>
 
 </body>
