--- a/src/main/resources/templates/catalogs/itemCategoryAdd.html
+++ b/src/main/resources/templates/catalogs/itemCategoryAdd.html
@@ -18,7 +18,15 @@
  	<h3 th:text="#{itemcategory.lbl.title}">Item categories!!</h3>
  	<p th:text="#{itemcategory.lbl.caption}">ADD Item categories description!!</p>
  	
- 	<form th:action="@{/catalogs/categories/add}" method="post" class="form-horizontal" th:object="${category}">
+ 	<form th:action="@{/catalogs/categories/}+(${edit}?'edit':'add')" method="post" class="form-horizontal" th:object="${category}"
+ 	onchange="enableIfChange()">
+ 	  
+ 	  <div th:if="${edit}" class="form-group" th:name="id" th:errorclass="'form-group has-error'">
+		<div class="col-sm-6">
+			<input id="id"  th:field="*{id}" type="hidden" required="required" class="form-control"/>
+		</div>
+	  </div>
+
  	  <div class="form-group" th:name="description" th:errorclass="'form-group has-error'">
 		<label for="description" th:text="#{itemCategory.lbl.desc}" class="col-sm-1 control-label"></label>
 		<div class="col-sm-6">
@@ -29,24 +37,24 @@
 		</div>
 	  </div>
 
- 	  <div th:if="${edit}" class="form-group" th:name="description" th:errorclass="'form-group has-error'">
-		<label for="status" th:text="#{itemCategory.lbl.desc}" class="col-sm-1 control-label">status!!</label>
+ 	  <div th:if="${edit}" class="form-group" th:name="status" th:errorclass="'form-group has-error'">
+		<label for="status" th:text="#{itemCategory.lbl.status}" class="col-sm-1 control-label">status!!</label>
 		<div class="col-sm-6">
-			<select id="description"  th:field="*{status}" class="form-control">
-				<option value="0" disabled="disabled">-select one-!!</option>
-				<option value="0">status1!!</option>
-				<option value="2">status2!!</option>
-				<option value="3">status3!!</option>
+			<select id="status"  th:field="*{status}" class="form-control">
+				<option th:each="type : ${categoryTypes}" th:value="${type}"
+					th:text="#{${'lbl.status.' + type}}">REGISTERED!!</option>
 			</select>
-			<ul th:if="${#fields.hasErrors('description')}" class="help-block">
-	 			<li th:each="err : ${#fields.errors('description')}" th:text="${err}"/>
+			<ul th:if="${#fields.hasErrors('status')}" class="help-block">
+	 			<li th:each="err : ${#fields.errors('status')}" th:text="${err}"/>
 	 		</ul>
 		</div>
 	  </div>
 
 	   <div class="form-group">
    			<div class="col-sm-offset-1 col-sm-6">
-      			<button type="submit" class="btn btn-default" th:text="#{btn.add}">Add!!</button>
+      			<button type="submit" class="btn btn-primary" th:text="#{btn.save}">Save!!</button>
+      			<button type="reset" class="btn btn-default" th:text="#{btn.reset}" disabled="disabled">Reset!!</button>
+      			<a th:href="@{/catalogs/categories}" th:text="#{btn.return}" class="btn btn-default pull-right">Regresar!!</a>
     		</div>
 	  </div>
  	</form>
