--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,23 +1,37 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Libel Albus - Error</title>
+<title>Invent - Unexpected Action</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
+<link rel="stylesheet" type="text/css"
+	href="../../../webapp/css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}" />
+
+<script src="../../webapp/js/jquery.js" th:src="@{/js/jquery.js}"></script>
+<script src="../../webapp/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+
+
 </head>
-<body>
-	<h1 th:text="#{msg.error.server.title}">SERVER ERROR!!</h1>
+<body class="container-fluid text-center">
+	<h2 th:text="#{msg.error.server.title}">SERVER ERROR!!</h2>
 	<h3 th:text="#{msg.error.server.note}">Content cannot be displayed, reason:!!</h3>
+
+	<div class="bg-warning col-md-3"></div>
+	<div class="bg-warning col-md-6 text-left">
+		<ul>
+			<li th:text="${status}"></li>
+			<li th:text="${error}"></li>
+			<li th:text="${timestamp}"></li>
+			<li th:if="${message}" th:text="${message}"></li>
+			<li th:if="${exception}" th:text="${exception}"></li>
+			<li th:if="${trace}" th:text="${trace}"></li>
+			<li th:if="${path}" th:text="${path}"></li>
+		</ul>
+		<div class="bg-warning col-md-5"></div>
+		<a class="btn btn-default btn-md" href="javascript:history.back()">BACK!!</a>
+	</div>
 	
-	<ul>
-		<li th:text="${status}"></li>
-		<li th:text="${error}"></li>
-		<li th:text="${timestamp}"></li>
-		<li th:text="${message}"></li>
-		<li th:text="${exception}"></li>
-		<li th:text="${trace}"></li>
-		<li th:text="${path}"></li>
-<!-- 		<li th:text="${errors}"></li> -->
-	</ul>
+	
 </body>
 </html>
