--- a/src/main/resources/templates/catalogs/itemCategoryAdd.html
+++ b/src/main/resources/templates/catalogs/itemCategoryAdd.html
@@ -7,19 +7,19 @@
 		
 	<script src="../../webapp/js/jquery.js" th:src="@{/js/jquery.js}"></script>
 <!-- 	<script src="../../webapp/js/jquery-form.js" th:src="@{/js/jquery-form.js}"></script> -->
-<!-- 	<script src="../../webapp/js/ajaxMethods.js" th:src="@{/js/ajaxMethods.js}"></script> -->
+	<script src="../../webapp/js/ajaxMethods.js" th:src="@{/js/ajaxMethods.js}"></script>
 	<script src="../../webapp/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
    
 </head>
 <body class="container-fluid">
 	<div th:replace="frags/common :: menu"></div>
-	<div th:replace="frags/common :: breadcrumbsCategories"></div>
+	<div th:replace="frags/common :: (${edit}? brCrumbCatCategEdit : brCrumbCatCategNew)"></div>
 		
  	<h3 th:text="#{itemcategory.lbl.title}">Item categories!!</h3>
  	<p th:text="#{itemcategory.lbl.caption}">ADD Item categories description!!</p>
  	
  	<form th:action="@{/catalogs/categories/}+(${edit}?'edit':'add')" method="post" class="form-horizontal" th:object="${category}"
- 	onchange="enableIfChange()">
+ 	onforminput="enableIfChange()">
  	  
  	  <div th:if="${edit}" class="form-group" th:name="id" th:errorclass="'form-group has-error'">
 		<div class="col-sm-6">
@@ -53,8 +53,8 @@
 	   <div class="form-group">
    			<div class="col-sm-offset-1 col-sm-6">
       			<button type="submit" class="btn btn-primary" th:text="#{btn.save}">Save!!</button>
-      			<button type="reset" class="btn btn-default" th:text="#{btn.reset}" disabled="disabled">Reset!!</button>
-      			<a th:href="@{/catalogs/categories}" th:text="#{btn.return}" class="btn btn-default pull-right">Regresar!!</a>
+      			<button type="reset" class="btn btn-default" th:text="#{btn.reset}">Reset!!</button>
+      			<a href="javascript:history.back()" th:text="#{btn.return}" class="btn btn-default pull-right">Regresar!!</a>
     		</div>
 	  </div>
  	</form>
